// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSpinner renders correctly 1`] = `
<div
  aria-hidden="false"
  aria-label="Loading"
  class="spinner-border"
  role="status"
/>
`;

exports[`CSpinner renders correctly 2`] = `
<div
  aria-hidden="false"
  aria-label="Loading"
  class="spinner-grow spinner-grow-sm text-success"
  role="status"
/>
`;
